--- a/WebApp/main/templates/agents/setup_anomaly.html
+++ b/WebApp/main/templates/agents/setup_anomaly.html
@@ -25,7 +25,7 @@
     <h3 class="mb-3">Anomaly Detection Training (Agent: {{agent.name}})</h3>
     <div class="alert alert-info" role="alert">
         <h5>How to train</h5>
-        <p>TensorFlow is a library for training neural networks. The specific architecture in this agent type is an autoe-ncoder,
+        <p>TensorFlow is a library for training neural networks. The specific architecture in this agent type is an auto-encoder,
             which reduces the data to a low dimensional vector and then aims to reconstruct it. By training the encoder
             on one specific type of syntax, the network will remember to reconstruct the format well. When presented with a
             different format, the reconstruction error will typically be much higher. This allows for detection of 
