--- a/WebApp/main/templates/main/addagent.html
+++ b/WebApp/main/templates/main/addagent.html
@@ -19,9 +19,8 @@
                     labeled input (active learning). Use Dedupe Agents to find permutations in common entries.</p>
 
                 <strong>Example Smells:</strong>
-                <ul>
-                    <li>Spacing Smell</li>
-                    <li>Casing Smell</li>
+                <ul class="text-left">
+                    <li>Spacing/Casing Inconsistency Smell</li>
                     <li>Truncating Smell</li>
                 </ul>
                 <p class="card-text text-center mt-auto">
