--- a/WebApp/main/templates/agents/validate_tensorflow.html
+++ b/WebApp/main/templates/agents/validate_tensorflow.html
@@ -17,6 +17,7 @@
     <hr />
 
     {% for class in class_data %}
+    {% if class.2 > 0 %}
     <h6 class="mb-0"> Class {{class.3}} </h6>
     <div>
         <p>
@@ -31,6 +32,7 @@
         </ul>
         <hr />
     </div>
+    {% endif %}
     {% endfor %}
 </div>
 {% endblock %}
