--- a/WebApp/main/templates/main/duplicates.html
+++ b/WebApp/main/templates/main/duplicates.html
@@ -1,10 +1,10 @@
 {% extends "main/baseloggedin.html" %}
 
 {% block content %}
-<div class="container pt-5">    
+<div class="container pt-5">
     <h3>Synonym Detection Results</h3>
     <p><strong>Agent</strong>: Manual Filtering <br />
-    <strong>Dataset</strong>: {{dataset.name}}</p>
+        <strong>Dataset</strong>: {{dataset.name}}</p>
     <a href="/download"><button class="btn btn-success"><span class="oi oi-data-transfer-download"></span> Download
             Results</button></a>
     <h5 class="mt-3">Synonymous pairs ({{matches.items|length}} found)</h5>
@@ -15,6 +15,13 @@
         0-occurence words in rare cases. However, in these cases, the word has still been actively detected at least
         once in your dataset.
     </p>
+
+    {% if matches.items|length == 0 %}
+    <div class="alert alert-warning">
+        <strong>Warning!</strong> <br />
+        You have not selected any similar pairs.
+    </div>
+    {% else%}
     {% for pairnum,pair in matches.items %}
     <div class="card mb-2">
         <div class="card-body">
@@ -65,5 +72,6 @@
         </div>
     </div>
     {% endfor %}
+    {% endif %}
 </div>
 {% endblock %}
